--- a/docs/less/mixins.less
+++ b/docs/less/mixins.less
@@ -1,20 +1,27 @@
 // Mixins in here
 
-.button-animation () {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    animation-name: example;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-  
+.style-button (@w, @bg, @c) {
+  width: @w;
+  border-radius: 15px;
+  color: @c;
+  background-color: @bg;
+  padding: 10px 0;
+  font-size: 2.5rem;
 
-  /* Standard syntax */
-  @keyframes example {
-    0%   {background-color: red;}
-    25%  {background-color: yellow;}
-    50%  {background-color: blue;}
-    100% {background-color: green;}
+}
+
+
+.button-color-animation (@color: @button-bg, @name: colorful, @time: 4s, @count: infinite) {
+    background-color: @color;
+    animation-name: @name;
+    animation-duration: @time;
+    animation-iteration-count: @count;
+    // animation-direction: alternate;
+  
+  @keyframes @name{
+    0%   {background-color: @buttonclr1;}
+    25%  {background-color: @buttonclr2;}
+    50%  {background-color: @buttonclr3;}
+    100% {background-color: @buttonclr4;}
   }
 }
